@@ -1,0 +1,12 @@
+#ifndef TREKSTAR_VHSCONTROLLER_H
+#define TREKSTAR_VHSCONTROLLER_H
+
+namespace TrekStar
+{
+    namespace Material
+    {
+
+    }
+}
+
+#endif //TREKSTAR_VHSCONTROLLER_H
