@@ -1,0 +1,12 @@
+#ifndef TREKSTAR_BOXSETVIEW_H
+#define TREKSTAR_BOXSETVIEW_H
+
+namespace TrekStar
+{
+    namespace Material
+    {
+
+    }
+}
+
+#endif //TREKSTAR_BOXSETVIEW_H
