@@ -1,0 +1,12 @@
+#ifndef TREKSTAR_VHSVIEW_H
+#define TREKSTAR_VHSVIEW_H
+
+namespace TrekStar
+{
+    namespace Material
+    {
+
+    }
+}
+
+#endif //TREKSTAR_VHSVIEW_H
